--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<html><head></head><body> Hi! My name is Fresia and this is where Ruby magic takes place! </body></html>
+<html><head></head>
+<style>
+body {
+        background-image:"http://www.vector-finder.com/site-images/too_big/summer_flower_001.jpg";
+} 
+ 
+</style>
+
+<body> Hi! My name is Fresia and this is where Ruby magic takes place! </body></html>
