--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head></head>
 <style>
 body {
-        background-image:"http://www.vector-finder.com/site-images/too_big/summer_flower_001.jpg";
+        background-image:url("http://www.saintpetersblog.com/archives/233946");
 } 
  
 </style>
