--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <html><head></head>
-<style>
-body {
-        background-image:url("http://www.saintpetersblog.com/archives/233946");
-} 
- 
-</style>
 
+<div style="background-image:url(http://www.gogreencebu.com/importance-of-water-to-the-society/); width 220px;height:140px;color:black;font-size: 18px;" </div>
 <body> Hi! My name is Fresia and this is where Ruby magic takes place! </body></html>
