--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html><head></head>
 
-<div style="background-image:url(http://heartofgreen.typepad.com/.a/6a00d83451cedf69e201a51162fcf0970c-pi);color:black;font-size: 18px;" </div>
+<div style="background-image: url('http://heartofgreen.typepad.com/.a/6a00d83451cedf69e201a51162fcf0970c-pi');color:white;font-size: 18px;" </div>
 <body> Hi! My name is Fresia and this is where Ruby magic takes place! </body></html>
