--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head></head>
-
+<html>
 <div style="background-image: url('http://heartofgreen.typepad.com/.a/6a00d83451cedf69e201a51162fcf0970c-pi'); width 100% height 100%; color:white;font-size: 24px;" </div>
-<body> Hi! My name is Fresia and this is where Ruby magic takes place! </body></html>
+
+<head></head>
+<body> Hi! My name is Fresia and this is where Ruby magic takes place! </body>
+</html>
