--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
 
 <head>
 <body> Hi! My name is Fresia and this is where Ruby magic takes place! </body>
+
+body {
+	font: 24px;color:white
+
+}
 </head>
 </html>
