--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
 <head>
 <body> Hi! My name is Fresia and this is where Ruby magic takes place! </body>
 
-body {
-	font: 24px;color:white
-
-}
+body style "font-size:24px;color:white"
 </head>
 </html>
