--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 
 <head>
-<body> Hi! My name is Fresia and this is where Ruby magic takes place! </body>
 
-body style "font-size:24px;color:white"
+
+<span style="font-size:24px;color:white">Hi! My name is Fresia and this is where Ruby magic takes place! </span>
 </head>
 </html>
