--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 
 
-<span style="font-size:24px;color:white">Hi! My name is Fresia and this is where Ruby magic takes place. Visit my Ruby repository<a href="https://github.com/FresiaC>here</a></span>
+<span style="font-size:24px;color:white">Hi! My name is Fresia and this is where Ruby magic takes place. Visit my Ruby repository<a href="https://github.com/FresiaC">here</a>
+</span>
 </head>
 </html>
